committing about me

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8"/>
     <title>About Jamie</title>
-    <img src="https://ca.slack-edge.com/T053NFY3R-U02FK21GRAL-67967d7c8247-512"
+    <img src="./img/jamiepic.png"
          alt="jamie and girlfriend" width="300px" height="300px"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
 <h1>
@@ -20,7 +20,7 @@
       but I can now add coding to the list!
   </p>
   <p>
-      I have a cat that i rescued as a kitten about five years ago named Tuff.
+      I have a cat that I rescued as a kitten about five years ago named Tuff.
   </p>
 </body>
 </html>
