added Jaime.jpg added to style.css changed index.html

--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
-<img src="./img/jamiepic.png"
-     alt="jamie and girlfriend" width="300px" height="300px"/>
-<h1>
-    About Jamie
-</h1>
+    <img src="./img/jaime.jpg"
+     alt="jamie and girlfriend" width="400px" height="400px"/>
+    <h1>
+            About Jamie
+    </h1>
   <p>
-      Hello, I'm Jamie, and in this picture is my girlfriend
-      of over two years.
+      Hello, I'm Jamie, the owner of M5 Industries. I am also the co-host of MythBusters.
   </p>
   <p>
-      My two absolute favorite hobbies are hiking and video games,
-      but I can now add coding to the list!
+      My main work/hobby would be working with special effects.
+      I also like to help create things to help people.
+      The most notable creation ive made is called The Sentry which is a tank for firefighting.
+  <p>
+     I have a wife named Eileen Walsh.
+  </p>
+    <h3>Fun Facts</h3>
+  <p>
+      I have meet with president Barack Obama.
   </p>
   <p>
-      I have a cat that I rescued as a kitten about five years ago named Tuff.
+      I am known for my robot Blendo.
   </p>
 </body>
 </html>
+
+<!-- Edited By Esten -->
