--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </p>
     <h3>Fun Facts</h3>
   <p>
-      I have meet with president Barack Obama.
+      I have met with president Barack Obama.
   </p>
   <p>
       I am known for my robot Blendo.
