fixed wrong text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <img src="./img/jaime.jpg"
-     alt="jamie and girlfriend" width="400px" height="400px"/>
+     alt="jamie" width="400px" height="400px"/>
     <h1>
             About Jamie
     </h1>
